// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chip basic usage 1`] = `
<bolt-chip>
  <span class="c-bolt-chip c-bolt-chip--size-small">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Hello World
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip chip size: medium 1`] = `
<bolt-chip size="medium">
  <span class="c-bolt-chip c-bolt-chip--size-medium">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Chip size
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip chip size: small 1`] = `
<bolt-chip size="small">
  <span class="c-bolt-chip c-bolt-chip--size-small">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Chip size
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip chip size: xsmall 1`] = `
<bolt-chip size="xsmall">
  <span class="c-bolt-chip c-bolt-chip--size-xsmall">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Chip size
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip icon only 1`] = `
<bolt-chip icon-only>
  <span class="c-bolt-chip c-bolt-chip--size-small c-bolt-chip--icon-only">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Show more
    </ssr-keep>
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__icon"
    >
      <bolt-icon slot="after"
                 name="more"
      >
        <span class="c-bolt-icon c-bolt-icon--more">
          <svg class="c-bolt-icon__icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <g fill="var(--bolt-theme-icon, currentColor)">
                <path d="M14 12a2 2 0 11-4 0 2 2 0 014 0M6 12a2 2 0 11-4 0 2 2 0 014 0M22.1 12a2 2 0 11-4 0 2 2 0 014 0">
                </path>
              </g>
            </g>
          </svg>
        </span>
      </bolt-icon>
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip icon usage 1`] = `
<bolt-chip>
  <span class="c-bolt-chip c-bolt-chip--size-small">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__icon"
    >
      <bolt-icon slot="before"
                 name="check"
      >
        <span class="c-bolt-icon c-bolt-icon--check">
          <svg class="c-bolt-icon__icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <path fill="var(--bolt-theme-icon, currentColor)"
                    d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
              >
              </path>
            </g>
          </svg>
        </span>
      </bolt-icon>
    </ssr-keep>
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Icon before
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip url usage 1`] = `
<bolt-chip url="https://pega.com"
           target="_blank"
>
  <a href="https://pega.com"
     target="_blank"
     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
  >
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Has URL
    </ssr-keep>
  </a>
</bolt-chip>
`;
